# Magritte-torch

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: build-and-test-on-pr.yml  build-and-test.yml
CI/: updateVersion.py
docs/src/: Doxyfile  conf.py  index.rst
docs/src/0_getting_started/: 0_prerequisites.rst  1_quickstart.rst  index.rst
docs/src/1_examples/: index.rst
docs/src/1_examples/0_creating_models/: 0_create_analytic_disk.ipynb  1_create_analytic_spiral.ipynb  index.rst
docs/src/1_examples/0_creating_models/.ipynb_checkpoints/: 1_create_analytic_spiral-checkpoint.ipynb
docs/src/1_examples/1_post-processing/: 1_create_AMRVAC_3D.ipynb  2_reduce_AMRVAC_3D.ipynb  3_create_Phantom_3D.ipynb  4_reduce_Phantom_3D.ipynb  index.rst
docs/src/1_examples/2_synthetic_observations/: 0_image_analytic_disk.ipynb  1_image_analytic_spiral.ipynb  2_create_and_image_Phantom.ipynb  3_image_3D_AMRVAC.ipynb  4_image_3D_AMRVAC_red.ipynb  5_image_3D_Phantom.ipynb  6_image_3D_Phantom_red.ipynb  7_image_3D_Phantom_red_NLTE.ipynb  index.rst
docs/src/2_benchmarks/: 0_analytic_benchmarks.rst  1_numeric_benchmarks.rst  index.rst
docs/src/3_python_api_documentation/: index.rst  magrittetorch.boundary.rst  magrittetorch.chemistry.rst  magrittetorch.collisionpartner.rst  magrittetorch.geometry.rst  magrittetorch.image.rst  magrittetorch.io.rst  magrittetorch.linedata.rst  magrittetorch.lineproducingspecies.rst  magrittetorch.lines.rst  magrittetorch.logger.rst  magrittetorch.memorymapping.rst  magrittetorch.mesher.rst  magrittetorch.model.rst  magrittetorch.parameters.rst  magrittetorch.plot.rst  magrittetorch.points.rst  magrittetorch.rays.rst  magrittetorch.setup.rst  magrittetorch.solvers.rst  magrittetorch.sources.rst  magrittetorch.species.rst  magrittetorch.storagetypes.rst  magrittetorch.timer.rst
docs/src/_templates/: layout.html
docs/src/images/: Magrittetorch_logo_no_background.xcf
magrittetorch/algorithms/: raytracer.py  solvers.py  torch_algorithms.py
magrittetorch/model/: image.py  model.py  parameters.py
magrittetorch/model/chemistry/: chemistry.py  species.py
magrittetorch/model/geometry/: boundary.py  geometry.py  points.py  rays.py
magrittetorch/model/sources/: collisionpartner.py  evalfrequencies.py  frequencyevalhelper.py  linedata.py  lineproducingspecies.py  linequadrature.py  lines.py  sources.py
magrittetorch/model/thermodynamics/: temperature.py  thermodynamics.py  turbulence.py
magrittetorch/tools/: mesher.py  plot.py  radiativetransferutils.py  setup.py  timer.py
magrittetorch/utils/: constants.py  io.py  logger.py  memorymapping.py  readme.txt  storagetypes.py
tests/benchmarks/analytic/: all_constant_single_ray.py  all_constant_single_ray_no_saving_model.py  all_zero_single_ray.py  benchmarks.ipynb  constant_velocity_gradient_1D.py  density_distribution_1D.py  density_distribution_single_ray.py  reject_nonexistent_species.py  test_benchmarks.py
tests/benchmarks/numeric/: test_benchmarks.py  vanZadelhoff_1_1D.py  vanZadelhoff_2_1D.py
tests/data/: README.md
tests/implementation_tests/: create_geometry.py  load_old_1D_magritte_model.py  load_old_3D_magritte_model.py  test_astropy_input.py  test_memory_manager.py
tests/models/: README.md
