[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "magrittetorch"
version = "0.0.1"
description = "Probabilistic 3D Reconstruction of Specrtral Line Observations."
readme = "README.md"
authors = [{ name = "Thomas Ceulemans", email = "thomas.ceulemans@kuleuven.be" }]
license = { file = "LICENSE" }
classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing"
]
keywords = ["Astrophysics", "Astronomy"]
dependencies = [
    "matplotlib",
    "astroquery",
    "ipywidgets",
    "astropy",
    "torch>=2.0.0",
    "numpy",
    "tqdm",
    "h5py",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Magritte-code/Magritte-torch"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = [".", "src"]
