[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "magrittetorch"
version = "0.1.4"
description = "Probabilistic 3D Reconstruction of Specrtral Line Observations."
readme = "README.md"
authors = [{ name = "Thomas Ceulemans", email = "thomas.ceulemans@kuleuven.be" }]
license = { file = "LICENSE" }
classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing"
]
keywords = ["Astrophysics", "Astronomy"]
dependencies = [
    "matplotlib", # for plotting
    "astroquery", # for downloading data
    "ipywidgets", # for interactive plots
    "astropy", # for units, io of astronomy fileformats
    "torch>=2.0.0", # pytorch
    "numpy", # numpy
    "tqdm", # for progress bars
    "h5py", # for saving data in hdf5 format
    "scipy", # for interpolation
    "plotly", # for visualization
    "palettable", # for color maps
    "psutil", # for checking memory usage
    "yt",   # visualization
    "ipykernel", # for jupyter notebooks
    "healpy", #angular discretization
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]
docs = ["sphinx", "breathe", "sphinx_copybutton", "nbsphinx", "sphinx_rtd_theme", "pandoc"]

[project.urls]
Homepage = "https://github.com/Magritte-code/Magritte-torch"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = [".", "src"]

[tool.setuptools.packages.find]
include = ["magrittetorch*"]
exclude = ["docs*", "tests*", "models*"]